--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "mongoose": "^5.12.8",
     "nodemon": "^2.0.7"
   }
 }
