--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "express-validator": "^6.11.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
     "nodemon": "^2.0.7"
   }
